# cargo-git-registry

./: Cargo.toml  README.md
src/: cmd_args.rs  main.rs  registry.rs  repo.rs
src/commands/: clone.rs  forget.rs  init.rs  list.rs  mod.rs  publish.rs  remember.rs  remove.rs  update.rs  use_registry.rs
src/utils/: cargo_config.rs  clone.rs  get_remote_url.rs  git.rs  known_repos.rs  lines.rs  mod.rs  toml.rs
